<resources>
    <string name="app_name">Stuffy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_share">Share</string>
    <string name="title_notifications">Notifications</string>
    <string name="gratis">Gratis</string>
    <string name="image">image</string>
    <string name="_7350">7350</string>


    <string-array name="name">


        <item>Nike Revolution</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Sidiq Permana</item>
    </string-array>
    <string-array name="description">


        <item>Nike is shoe</item>
        <item>Deny is human</item>
        <item>Budi is human</item>
        <item>Sidiq is human</item>
    </string-array>
    <string-array name="size">


        <item>2</item>
        <item>1</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="rating">


        <item>4.5</item>
        <item>5</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="note">

        <item>asd</item>
        <item>asd</item>
        <item>asd</item>
        <item>asd</item>
    </string-array>
    <string-array name="status">

        <item>Menunggu</item>
        <item>Menunggu</item>
        <item>Selesai</item>
        <item>Selesai</item>
    </string-array>
    <string-array name="location">


        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Jakarta Indonesia</item>
    </string-array>


    <string-array name="avatar">


        <item>https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5/fb7eda3c-5ac8-4d05-a18f-1c2c5e82e36e/blazer-mid-77-vintage-shoe-dNWPTj.png</item>
        <item>https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5/fb7eda3c-5ac8-4d05-a18f-1c2c5e82e36e/blazer-mid-77-vintage-shoe-dNWPTj.png</item>
        <item>https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5/fb7eda3c-5ac8-4d05-a18f-1c2c5e82e36e/blazer-mid-77-vintage-shoe-dNWPTj.png</item>
        <item>https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5/fb7eda3c-5ac8-4d05-a18f-1c2c5e82e36e/blazer-mid-77-vintage-shoe-dNWPTj.png</item>
    </string-array>
    <integer-array name="image">

        <item>@drawable/produk1</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user10</item>
    </integer-array>
    <string-array name="filterName">
        <item>Alat Musik</item>
        <item>Olahraga</item>
        <item>Plastik</item>
        <item>Elektronik</item>
    </string-array>
    <string name="title_favorite">Favorite</string>
    <string name="search">search</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="transaction">Transaction</string>
    <string name="home">Home</string>
    <string name="pesan">Pesan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="almat">Alamat</string>
    <string name="transaksi">Transaksi</string>
    <string name="wishlist">Wishlist</string>
    <string name="share">Share</string>
    <string name="lainnya_di_pengguna_ini">Lainnya di pengguna ini</string>
    <string name="detail_barang">Detail Barang</string>
    <string name="tab_text_1">Confirmation</string>
    <string name="tab_text_2">Share</string>
    <string name="tab_text_3">Take</string>
    <string name="content_tab_confirmation">Welcome Home</string>
    <string name="content_tab_share">Change your Profile here</string>
    <string name="content_tab_take">This is Tab %1$d</string>
    <string name="confirmation">Confirmation</string>
    <string name="ambil">Ambil</string>
    <string name="keluar">Keluar</string>
    <string name="informasi_profil">Informasi Profil</string>
    <string name="nama">Nama</string>
    <string name="no_hp">No HP</string>
    <string name="e_mail">E-mail</string>
    <string name="alamat">Alamat</string>
    <string name="ubah_foto_profil">Ubah Foto Profil</string>
    <string name="bagikan">Bagikan</string>
    <string name="rating">Rating</string>
    <string name="kondisi">Kondisi</string>
    <string name="_2_hari_yang_lalu">2 hari yang lalu</string>
    <string name="foto_barang">Foto Barang</string>
    <string name="tambahkan_foto_barang">Tambahkan foto barang ...</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="tambahkan_nama_barang">Tambahkan nama barang ...</string>
    <string name="tambahkan_detail_barang">Tambahkan detail barang ...</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="tambahkan_jumlah_barang">Tambahkan jumlah barang ...</string>
    <string name="barang_yang_dipesan">Barang yang dipesan</string>
    <string name="_4_6">4.6</string>
    <string name="anita_bahari">Anita bahari</string>
    <string name="lokasi_barang">Lokasi barang</string>
    <string name="catatan">Catatan</string>
    <string name="tambahakan_alamat_anda">Tambahakan alamat anda ...</string>
    <string name="pilih_lokasi_anda">Pilih lokasi anda</string>

    <string name="web_client_id">123229511294-0b1qbgtdq2qor9bfehoa2pfbe3mci46r.apps.googleusercontent.com</string>
    <string name="tambahkan_lokasi_barang">Tambahkan lokasi barang ...</string>
</resources>