<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.stuffy.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_menuActivity2"
            app:destination="@id/navigation4"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_out_right"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.stuffy.presentation.cart.CartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_share"
        android:name="com.example.stuffy.presentation.share.ShareFragment"
        android:label="@string/title_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.stuffy.presentation.transaction.TransactionFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_transaction" />
    <navigation android:id="@+id/navigation4"
        app:startDestination="@id/menuActivity2">
        <activity
            android:id="@+id/menuActivity2"
            android:name="com.example.stuffy.presentation.menu.MenuActivity"
            android:label="activity_menu"
            tools:layout="@layout/activity_menu" />
        <action
            android:id="@+id/action_global_navigation_home3"
            app:destination="@id/navigation_home"
            app:enterAnim="@android:anim/slide_out_right" />
    </navigation>

</navigation>