<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.confirmation.ConfirmationActivity">

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/dec"
      android:layout_width="50dp"
      android:layout_height="48dp"
      android:layout_marginStart="76dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/arch_left"
      android:text="-"
      app:layout_constraintStart_toEndOf="@+id/imageView20"
      app:layout_constraintTop_toBottomOf="@+id/textView38" />

  <TextView
      android:id="@+id/count"
      android:layout_width="62dp"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/bg_text_counter"
      android:ems="10"
      android:gravity="center"
      android:textColor="@color/black"
      android:textSize="30sp"
      app:layout_constraintStart_toEndOf="@+id/dec"
      app:layout_constraintTop_toBottomOf="@+id/textView38" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/inc"
      android:layout_width="50dp"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/arch_right"
      android:text="+"
      app:layout_constraintStart_toEndOf="@+id/count"
      app:layout_constraintTop_toBottomOf="@+id/textView38" />

  <TextView
      android:id="@+id/textView33"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="28dp"
      android:layout_marginTop="16dp"
      android:text="@string/confirmation"
      app:layout_constraintStart_toEndOf="@+id/imageView18"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView18"
      android:layout_width="0dp"
      android:layout_height="36dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="4dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

  <View
      android:id="@+id/divider11"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginTop="30dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView33" />

  <TextView
      android:id="@+id/textView34"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/barang_yang_dipesan"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/divider11" />

  <ImageView
      android:id="@+id/imageView19"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView34"
      app:srcCompat="@drawable/ic_baseline_star_rate_24"
      android:contentDescription="TODO" />

  <TextView
      android:id="@+id/textView35"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/_4_6"
      app:layout_constraintStart_toEndOf="@+id/imageView19"
      app:layout_constraintTop_toBottomOf="@+id/textView34" />

  <TextView
      android:id="@+id/textView36"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/anita_bahari"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView19" />

  <ImageView
      android:id="@+id/imageView20"
      android:layout_width="129dp"
      android:layout_height="100dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="12dp"
      android:src="@drawable/produk1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView36" />

  <TextView
      android:id="@+id/textView37"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="116dp"
      android:text="Nike Revolution"
      app:layout_constraintStart_toEndOf="@+id/imageView20"
      app:layout_constraintTop_toBottomOf="@+id/divider11" />

  <TextView
      android:id="@+id/textView38"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="22dp"
      android:text="Jl RA Kartini"
      app:layout_constraintEnd_toEndOf="@+id/textView37"
      app:layout_constraintStart_toStartOf="@+id/textView37"
      app:layout_constraintTop_toBottomOf="@+id/textView37" />

  <View
      android:id="@+id/divider12"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginTop="35dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView20" />

  <TextView
      android:id="@+id/textView39"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/lokasi_barang"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/divider12" />

  <TextView
      android:id="@+id/textView40"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="12dp"
      android:text="Jl RA Kartini"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView39" />

  <TextView
      android:id="@+id/textView41"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/catatan"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.023"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/divider13" />

  <View
      android:id="@+id/divider13"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginTop="13dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/mapView" />

  <com.google.android.gms.maps.MapView
      android:id="@+id/mapView"
      android:layout_width="280dp"
      android:layout_height="109dp"
      android:layout_marginTop="12dp"
      android:contentDescription="@string/alamat"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.353"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView40" />

  <EditText
      android:id="@+id/editTextTextPersonName"
      android:layout_width="368dp"
      android:layout_height="99dp"
      android:layout_marginTop="12dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="Seperti: tolong cepat"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.36"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView41" />

  <Button
      android:id="@+id/button7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ambil"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
</androidx.constraintlayout.widget.ConstraintLayout>